--- a/LibraryRedux/Views/Home/Search.cshtml
+++ b/LibraryRedux/Views/Home/Search.cshtml
@@ -8,7 +8,7 @@
 
 <h1>Search</h1>
 
-<form asp-action="SearchLibrary" asp-controller="Home">
+<form asp-action="SearchLibrary" asp-controller="Home" method="get">
     <input type="text" name="search" placeholder="Enter title or author here" />
     <button type="submit">Search</button>
 </form>
