Added browse page, tinkered with views/url redirects.

--- a/LibraryRedux/Views/Home/Index.cshtml
+++ b/LibraryRedux/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
     </p>
     <form asp-action="Menu" asp-controller="Home">
         <select name="menu">
+            <option value="library">View all Books</option>
             <option value="search">Search for a book</option>
             <option value="return">Return a book</option>
         </select>
