--- a/LibraryRedux/Views/Home/CheckOut.cshtml
+++ b/LibraryRedux/Views/Home/CheckOut.cshtml
@@ -12,3 +12,5 @@
     You have checked out @Model.Title.
 </p>
 
+<a class="badge" style="font-size: 18px; padding-top: 10px" asp-action="Index" asp-controller="Home">Return to Menu</a>
+
