--- a/LibraryRedux/Views/Home/Return.cshtml
+++ b/LibraryRedux/Views/Home/Return.cshtml
@@ -38,4 +38,6 @@
             <p>You currently have no books checked out.</p>
         }
 
+<a class="badge" style="font-size: 18px" asp-action="Index" asp-controller="Home">Return to Menu</a>
+
 
