--- a/LibraryRedux/Views/Home/Index.cshtml
+++ b/LibraryRedux/Views/Home/Index.cshtml
@@ -2,17 +2,19 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome to the Bibliotecha</h1>
-    <p>
-        Please select what you would like to do today:
-    </p>
-    <form asp-action="Menu" asp-controller="Home">
-        <select name="menu">
-            <option value="library">View all Books</option>
-            <option value="search">Search for a book</option>
-            <option value="return">Return a book</option>
-        </select>
-        <button type="submit">Enter the Library</button>
-    </form>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">Welcome to the Bibliotecha</h1>
+        <p>
+            Please select what you would like to do today:
+        </p>
+        <form asp-action="Menu" asp-controller="Home">
+            <select name="menu">
+                <option value="library">View all Books</option>
+                <option value="search">Search for a book</option>
+                <option value="return">Return a book</option>
+            </select>
+            <button type="submit">Enter the Library</button>
+        </form>
+        <br />
+        <img src="https://cceit.ou.edu/wp-content/uploads/2016/03/library-logo-clipart-1.png" />
+    </div>
