--- a/LibraryRedux/Views/Home/ManageUser.cshtml
+++ b/LibraryRedux/Views/Home/ManageUser.cshtml
@@ -22,7 +22,7 @@
     </form>
 
 
-    <p id="userName">
+    <div id="userName">
         @if (Model != null)
         {
             <table align="center" style="text-align: center">
@@ -39,7 +39,7 @@
 
             </table>
         }
-    </p>
+    </div>
 
     <a class="badge" style="font-size: 18px" asp-action="Admin" asp-controller="Home">Return to Admin Page</a>
 
