--- a/LibraryRedux/Views/Home/Admin.cshtml
+++ b/LibraryRedux/Views/Home/Admin.cshtml
@@ -4,8 +4,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="text-center">
-    <h1>Administrator Page</h1>
-    <a class="badge" style="font-size: 18px" asp-action="ManageUser" asp-controller="Home">Manage Users</a>
-    <a class="badge" style="font-size: 18px" asp-action="ManageBook" asp-controller="Home">Manage Books</a>
-</div>
+    <div class="text-center">
+        <h1>Administrator Page</h1>
+        <a class="badge-pill" style="font-size: 18px" asp-action="ManageUser" asp-controller="Home">Manage Users</a>
+        <a class="badge-pill" style="font-size: 18px" asp-action="ManageBook" asp-controller="Home">Manage Books</a>
+        <a class="badge-pill" style="font-size: 18px" asp-action="ManageOuts" asp-controller="Home">View Current Outs</a>
+    </div>
